--- a/Churn_Mushrooms/Churn_Mushrooms.ipynb
+++ b/Churn_Mushrooms/Churn_Mushrooms.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = train.drop('Customer ID' , 1)"
+    "#train = train.drop('Customer ID' , 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -462,7 +462,7 @@
        "Churn Status                               1.000000  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,19 +473,20 @@
     "encoder = LabelEncoder()\n",
     "\n",
     "train = train.dropna()\n",
-    "train.iloc[:,10] = encoder.fit_transform(train.iloc[:,10])\n",
     "train.iloc[:,11] = encoder.fit_transform(train.iloc[:,11])\n",
+    "train.iloc[:,12] = encoder.fit_transform(train.iloc[:,12])\n",
     "train.corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "#3,4,5,8,9\n",
-    "training_data =  train.iloc[:, [0,1,2,3,4,6,8,10,11]].values\n",
+    "# 3,4,5,8,9\n",
+    "training_data =  train.iloc[:, [3,4,5,8,9]].values\n",
     "goal_data     =  train.iloc[:, -1].values\n",
     "\n",
     "\n",
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +509,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -553,13 +554,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>92</td>\n",
-       "      <td>25</td>\n",
+       "      <td>82</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>52</td>\n",
-       "      <td>72</td>\n",
+       "      <td>31</td>\n",
+       "      <td>93</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -567,11 +568,11 @@
       ],
       "text/plain": [
        "    0   1\n",
-       "0  92  25\n",
-       "1  52  72"
+       "0  82  35\n",
+       "1  31  93"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,16 +585,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6804979253112033"
+       "0.7261410788381742"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -818,7 +819,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -1037,7 +1038,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1839,7 @@
        "[23 rows x 23 columns]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,11 +1850,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data2 =  mushrooms.iloc[:, [1,2,6,8,17,20,21,22]].values\n",
+    "# 1,2,6,8,17,20,21,22\n",
+    "\n",
+    "training_data2 =  mushrooms.iloc[:, [2,3,4,5,6,7,13]].values\n",
     "goal_data2     =  mushrooms.iloc[:, 0].values\n",
     "\n",
     "\n",
@@ -1863,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1878,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1921,13 +1924,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>773</td>\n",
-       "      <td>79</td>\n",
+       "      <td>822</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>163</td>\n",
-       "      <td>610</td>\n",
+       "      <td>113</td>\n",
+       "      <td>660</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1935,11 +1938,11 @@
       ],
       "text/plain": [
        "     0    1\n",
-       "0  773   79\n",
-       "1  163  610"
+       "0  822   30\n",
+       "1  113  660"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1952,16 +1955,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8510769230769231"
+       "0.912"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
