--- a/Churn_Mushrooms/Churn_Mushrooms.ipynb
+++ b/Churn_Mushrooms/Churn_Mushrooms.ipynb
@@ -22,6 +22,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict if a customer will leave the country !\n",
+    "\n",
+    "using the [chrurn dataset](https://www.kaggle.com/filemide/churns#churn_train.csv) investigate the features and there affect on the customer.\n",
+    "\n",
+    "\n",
+    "![churn](res/chrun.jpeg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -480,12 +492,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3,4,5,8,9\n",
-    "# 3,4,5,8,9\n",
     "training_data =  train.iloc[:, [3,4,5,8,9]].values\n",
     "goal_data     =  train.iloc[:, -1].values\n",
     "\n",
@@ -497,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +519,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +582,7 @@
        "1  31  93"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +604,7 @@
        "0.7261410788381742"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,6 +618,17 @@
    "metadata": {},
    "source": [
     "# Mushrooms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mushroom Classification\n",
+    "\n",
+    "using the [mushroom dataset](https://www.kaggle.com/uciml/mushroom-classification/home) classify if the mushroom is poisonous or not \n",
+    "\n",
+    "![mushroom](res/Mushroom.jpg)"
    ]
   },
   {
@@ -1955,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1985,7 @@
        "0.912"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
